Modificacion de servicios y ts para comprobar el modo online y offline

--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -44,8 +44,8 @@
           </td>
         </ng-container>
       
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'turno', 'email', 'telefono', 'acciones']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['nombre', 'turno', 'email', 'telefono', 'acciones'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono', 'acciones']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'acciones'];"></tr>
       </table>
       
       </div>
