--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -60,4 +60,9 @@
            </div>
       </mat-card-content>
   </mat-card>
+
+  <!-- <div>
+    <h1>Panel de Sincronización</h1>
+<button (click)="sync()">Iniciar Sincronización</button>
+  </div> -->
 </div>
