--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -61,8 +61,8 @@
       </mat-card-content>
   </mat-card>
 
-  <!-- <div>
+  <div>
     <h1>Panel de Sincronización</h1>
 <button (click)="sync()">Iniciar Sincronización</button>
-  </div> -->
+  </div> 
 </div>
