--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
@@ -157,13 +157,13 @@
                             </ng-template>                       
                      
 
-                            <p><label  class="large-text">Estatus:</label></p>
+                            <!--<p><label  class="large-text">Estatus:</label></p>
                             <p>
                                     <mat-radio-group aria-label="Select an option" formControlName="status">
                                         <mat-radio-button value=1>Activo</mat-radio-button>
                                         <mat-radio-button value=0>Inactivo</mat-radio-button>
                                       </mat-radio-group>
-                            </p>
+                            </p>-->
                             <br/>
                             <br/>  
                         </div>
