--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -28,26 +28,58 @@
                  <th mat-header-cell *matHeaderCellDef> Nombre </th>
                  <td mat-cell *matCellDef="let producto"> {{ producto.nombreProducto }} </td>
               </ng-container>
+
+              <ng-container matColumnDef="existencia">
+               <th mat-header-cell *matHeaderCellDef> Existencia </th>
+               <td mat-cell *matCellDef="let producto" class="custom-cell">
+                 <span [ngStyle]="{'background-color': (producto.existencia == 0 || producto.existencia == null) ? '#a30000' : '#00aa1c'}">
+                   {{ producto.existencia == null ? '00' : producto.existencia }}
+                 </span>
+               </td>
+             </ng-container>
+             
               <ng-container matColumnDef="estatus">
                  <th mat-header-cell *matHeaderCellDef> Estatus </th>
                  <td mat-cell *matCellDef="let producto">
                     {{ producto.activo == '1' ? 'Activo' : 'Inactivo' }}
                  </td>
               </ng-container>
+
               <ng-container matColumnDef="categoria">
                  <th mat-header-cell *matHeaderCellDef> Categoría </th>
-                 <td mat-cell *matCellDef="let producto"> {{ producto.nombreCategoria }} </td>
+                 <td mat-cell *matCellDef="let producto"> {{ producto.nombreCategoria}} </td>
               </ng-container>
-              <ng-container matColumnDef="acciones">
-                 <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                 <td mat-cell *matCellDef="let producto">
-                    <button mat-icon-button color="primary" (click)="editarProducto(producto.idProbob)">
-                       <mat-icon>edit</mat-icon>
-                    </button>
-                 </td>
-              </ng-container>
-              <tr mat-header-row *matHeaderRowDef="['nombre', 'estatus', 'categoria', 'acciones']"></tr>
-              <tr mat-row *matRowDef="let row; columns: ['nombre', 'estatus', 'categoria', 'acciones'];"></tr>
+
+
+              <ng-container matColumnDef="acciones" *ngIf="isAdmin()">
+               <th mat-header-cell *matHeaderCellDef> Acciones </th>
+               <td mat-cell *matCellDef="let producto">
+                 <!-- Verificar si el valor de id_bodega está presente -->
+                 <ng-container *ngIf="producto.existencia; else iconoNoIdBodega">
+                   <button mat-icon-button color="primary" (click)="editarProducto(producto.idProbob)">
+                     <mat-icon>edit</mat-icon>
+                   </button>
+                 </ng-container>
+                 <!-- Si no hay valor de id_bodega, mostrar un icono de prohibido -->
+                 <ng-template #iconoNoIdBodega>
+                   <mat-icon color="warn">block</mat-icon>
+                 </ng-template>
+               </td>
+             </ng-container>
+
+
+             <ng-container matColumnDef="acciones" *ngIf="isRecep()">
+               <th mat-header-cell *matHeaderCellDef> Acciones </th>
+               <td mat-cell *matCellDef="let producto">d
+                 <ng-container >
+                  <mat-icon color="warn">block</mat-icon>
+                 </ng-container>
+               </td>
+             </ng-container>
+             
+             
+              <tr mat-header-row *matHeaderRowDef="['nombre', 'existencia', 'estatus', 'categoria', 'acciones']"></tr>
+              <tr mat-row *matRowDef="let row; columns: ['nombre','existencia', 'estatus', 'categoria', 'acciones'];"></tr>
            </table>
         </div>
      </div>
